<resources>
    <!--内容相同的字符串最早为例，不在重复！翻译主要来自360翻译-->
    <!--开始、登录界面-->
    <string name="app_name">EchoMusic</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="visitor_login">游客登录</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="please_enter_username">请输入用户名</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_re_password">请确认密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="welcome">欢迎注册ECHO音乐帐号</string>
    <string name="agreement">请您阅读并且，同意EchoMusic用户协议和隐私协议</string>
    <string name="tip">已有账号?</string>
    <string name="login_now">马上登录</string>
    <!--底边栏、搜索栏-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">搜索</string>
    <string name="find">发现</string>
    <string name="creation">创作</string>
    <string name="social">乐圈</string>
    <string name="my_info">我的</string>
    <!--首页-->
    <string name="study_plan">学习计划</string>
    <string name="leader_board">排行榜</string>
    <string name="song_set">曲集</string>
    <string name="classification">分类</string>
    <string name="highlights">精选内容</string>
    <string name="more">更多></string>
    <!--创作-->
    <string name="compose">作曲</string>
    <string name="spectrum">谱曲</string>
    <string name="creation_square">创作广场</string>
    <string name="tutorial">教程</string>
    <string name="Highlights">作品管理</string>
    <string name="browsing_history">浏览历史</string>
    <string name="collection_management">收藏管理</string>
    <string name="creative_pay">创作激励</string>
    <string name="activities">活动</string>
    <string name="recommended_tutorials">推荐教程</string>
    <string name="gg">一对一小提琴培训！</string>
    <string name="dz">140人点赞!</string>
    <!--乐圈-->
    <string name="dynamic_state">动态</string>
    <string name="attention">关注</string>
    <string name="add_attention_btn_txt">+   关注</string>
    <string name="get_attention_btn_txt">✔  已关注</string>
    <!--我的-->
    <string name="edit">编辑</string>
    <string name="logo">logo</string>
    <string name="level">Lv.2</string>
    <string name="name">张三</string>
    <string name="sign">这里是签名</string>
    <string name="fans">粉丝</string>
    <string name="news">消息</string>
    <string name="attention_num">140</string>
    <string name="fans_num">1236</string>
    <string name="dynamic_state_num">14</string>
    <string name="news_num">0</string>
    <string name="my_songbook">我的曲集></string>
    <string name="my_favorite">我的喜爱></string>
    <string name="local_music">本地音乐></string>
    <string name="my_download">我的下载></string>
    <string name="purchased_music">已购乐曲></string>
    <string name="play_history">播放历史></string>
    <string name="music_list">曲集</string>
    <string name="echo_txt">Echo</string>
    <string name="top_hot">热度榜</string>
    <string name="new_top">新歌榜</string>
    <string name="download_top">下载榜</string>
    <string name="history_top">历史榜</string>
    <string name="myIns">我的作曲</string>
    <string name="insdraft">草稿箱</string>
    <string name="instoturial">寻找教程</string>
    <string name="ins_work">工作台</string>
    <string name="ins_upload">上传</string>
    <string name="mycomposition">我的谱曲</string>
    <!--待定ing-->
</resources>
