<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TopDetailActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head_ly"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/return_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:background="?attr/actionModeCloseDrawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/top_text"
            android:layout_width="82dp"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/leader_board"
            android:textColor="#121111"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/return_btn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_item_ly"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_ly">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/top_nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/hot_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_hot" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/new_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_top" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/download_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_top" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/history_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_top" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/top_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|start"
        android:layout_marginTop="95dp"
        android:background="#F2F2F2"
        android:paddingBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_item_ly"
        app:layout_constraintVertical_bias="0.989">

    </androidx.viewpager2.widget.ViewPager2>
</androidx.constraintlayout.widget.ConstraintLayout>