<?xml version="1.0" encoding="utf-8"?>
<!--选择注册\登录方式-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/start_logo_iv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/echologo_l" />

        <ImageView
            android:id="@+id/start_echo_iv"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/echo" />

    </LinearLayout>

    <ImageView
        android:id="@+id/start_bg_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/start_bg" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/shape_corner"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/visitor_btn"
        app:layout_constraintEnd_toEndOf="@+id/visitor_btn"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/visitor_btn" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/shape_corner"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_btn"
        app:layout_constraintEnd_toEndOf="@+id/reg_btn"
        app:layout_constraintStart_toStartOf="@+id/reg_btn" />

    <Button
        android:id="@+id/visitor_btn"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_corner"
        android:text="@string/visitor_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>